2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Document the sections closed by #endif
	* src/pwck.c, man/pwck.8.xml: No alternative shadow file can be
	given when USE_TCB is enabled.
	* src/pwck.c: Remove the -s option from the usage when USE_TCB is
	enabled. The option is still supported, but has no effect, as
	documented in the manpage.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Do not use pwd_file and spw_file. Always use the
	dbname() functions.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Re-indent.

2010-03-18  Nicolas François  <nicolas.francois@centraliens.net>

	* src/userdel.c, src/usermod.c, src/vipw.c, src/useradd.c,
	src/pwck.c, src/chage.c, lib/shadowio.c: Explicitly use the
	SHADOWTCB_FAILURE return code instead of 0 or implicit conversion
	to booleans.

2010-03-18  Paweł Hajdan, Jr.  <phajdan.jr@gentoo.org>

	* src/pwck.c: Add support for TCB.
	* src/pwck.c: Use spw_dbname() instead of spw_file since TCB
	changes from a file to another depending on the user. Also use
	pw_dbname() for consistency.

2010-03-17  Nicolas François  <nicolas.francois@centraliens.net>

	* src/faillog.c: Re-indent.

2010-03-17  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/tcbfuncs.h: Added type shadowtcb_status.
	* lib/tcbfuncs.h, lib/tcbfuncs.c: Return a shadowtcb_status
	instead of an int.
	* lib/tcbfuncs.c: Do not return in OUT_OF_MEMORY.
	* lib/tcbfuncs.c: Only FreeBSD specify that the returned buffer is
	NULL in case of failure. The return value of asprintf shall be
	checked.
	* lib/tcbfuncs.c: Avoid implicit conversion of pointers or
	integers to booleans.
	* lib/tcbfuncs.c: Avoid assignments in comparisons.
	* lib/tcbfuncs.c: Do not free path before its last use.
	* lib/tcbfuncs.c: Include shadowio.h, needed for the
	spw_setdbname's prototype.
	* lib/tcbfuncs.c: Ignore fflush() return value.